// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing API limits node limit, batch limit and depth limit 1`] = `
{
  "args": {
    "batch_limit": {
      "global": 10,
      "per_role": {
        "role1": 3,
      },
    },
    "depth_limit": {
      "global": 10,
      "per_role": {
        "role1": 2,
      },
    },
    "disabled": false,
    "node_limit": {
      "global": 10,
      "per_role": {
        "role1": 3,
      },
    },
  },
  "type": "set_api_limits",
}
`;

exports[`Testing API limits only batch limit 1`] = `
{
  "args": {
    "batch_limit": {
      "global": 10,
    },
    "disabled": false,
  },
  "type": "set_api_limits",
}
`;

exports[`Testing API limits only batch limit with per role 1`] = `
{
  "args": {
    "batch_limit": {
      "global": 10,
      "per_role": {
        "role1": 3,
      },
    },
    "disabled": false,
  },
  "type": "set_api_limits",
}
`;

exports[`Testing API limits only depth limit 1`] = `
{
  "args": {
    "depth_limit": {
      "global": 10,
    },
    "disabled": false,
  },
  "type": "set_api_limits",
}
`;

exports[`Testing API limits only depth limit with per role 1`] = `
{
  "args": {
    "depth_limit": {
      "global": 10,
      "per_role": {
        "role1": 3,
      },
    },
    "disabled": false,
  },
  "type": "set_api_limits",
}
`;

exports[`Testing API limits only node limit 1`] = `
{
  "args": {
    "disabled": false,
    "node_limit": {
      "global": 10,
    },
  },
  "type": "set_api_limits",
}
`;

exports[`Testing API limits only node limit with per role 1`] = `
{
  "args": {
    "disabled": false,
    "node_limit": {
      "global": 10,
      "per_role": {
        "role1": 3,
      },
    },
  },
  "type": "set_api_limits",
}
`;

exports[`Testing Remove API Settings remains the same when role doesn't exist 1`] = `
{
  "args": {
    "batch_limit": {
      "global": 10,
      "state": "disabled",
    },
    "depth_limit": {
      "global": 10,
      "state": "enabled",
    },
    "disabled": false,
    "node_limit": {
      "global": 10,
      "state": "disabled",
    },
    "rate_limit": {
      "global": {
        "max_reqs_per_min": 100,
        "unique_params": [
          "x-hasura-id",
        ],
      },
      "state": "disabled",
    },
  },
  "type": "set_api_limits",
}
`;

exports[`Testing Remove API Settings removes settings for a role 1`] = `
{
  "args": {
    "batch_limit": {
      "global": 10,
      "per_role": {},
      "state": "enabled",
    },
    "depth_limit": {
      "global": 10,
      "per_role": {},
      "state": "enabled",
    },
    "disabled": false,
    "node_limit": {
      "global": 10,
      "per_role": {},
      "state": "enabled",
    },
    "rate_limit": {
      "global": {
        "max_reqs_per_min": 100,
        "unique_params": [
          "x-hasura-id",
        ],
      },
      "state": "disabled",
    },
  },
  "type": "set_api_limits",
}
`;
